logs/build_optimize.log
  CC      drivers/gpu/drm/msm/msm_debugfs.o
  CC      drivers/gpu/drm/msm/msm_drv.o
  CC      net/ipv4/netfilter/nf_tproxy_ipv4.o
  CC      lib/sha1.o
  CC      lib/show_mem.o
../drivers/gpu/drm/msm/msm_drv.c:1236:38: error: too few arguments to function call, expected 3, have 2
 1236 |         return (strnstr(dev_name(dev), "mdp") != NULL);
      |                 ~~~~~~~                     ^
../include/linux/string.h:84:15: note: 'strnstr' declared here
   84 | extern char * strnstr(const char *, const char *, size_t);
      |               ^       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make[5]: *** [../scripts/Makefile.build:338: drivers/gpu/drm/msm/msm_drv.o] Error 1
make[4]: *** [../scripts/Makefile.build:642: drivers/gpu/drm/msm] Error 2
make[3]: *** [../scripts/Makefile.build:642: drivers/gpu/drm] Error 2
make[2]: *** [../scripts/Makefile.build:642: drivers/gpu] Error 2
make[1]: *** [/home/runner/work/kebab_kernelsu_susfs_support/kebab_kernelsu_susfs_support/kernel_source/Makefile:1238: drivers] Error 2
make[1]: *** Waiting for unfinished jobs....
  CC      net/ipv4/route.o
  CC      techpack/camera-oplus/drivers/cam_utils/cam_common_util.o
  CC      lib/siphash.o
  CC      techpack/camera-oplus/drivers/cam_utils/cam_cx_ipeak.o
  CC      net/ipv4/netfilter/nf_log_ipv4.o